# TODORESTfulAPI

./: .env  README.md  docker-compose.override.yml  docker-compose.traefik.yml  docker-compose.yml
backend/: Dockerfile
backend/app/: alembic.ini  config.py  main.py  pyproject.toml
backend/app/api/: routers.py  schemas.py
backend/app/api/endpoints/: __init__.py  job.py  task.py  user.py
backend/app/database/: db_helper.py
backend/app/database/migration/: env.py
backend/app/database/migration/versions/: 0ab8b883587c_.py
backend/app/database/models/: __init__.py  base.py  job.py  task.py  user.py
backend/app/database/requests/job/: crud.py
backend/app/database/requests/task/: crud.py
backend/app/database/requests/user/: crud.py
grafana/provisioning/dashboards/: fastapi-dashboard.json
grafana/provisioning/datasources/: prometheus.yml
prometheus/configs/: prometheus-localhost.yml
