[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["diana <dianagaaabitova@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.9"
prometheus-fastapi-instrumentator = "^7.0.0"
fastapi = "^0.115.0"
sqlalchemy = "^2.0.35"
alembic = "^1.13.3"
environs = "^11.0.0"
asyncpg = "^0.29.0"
uvicorn = "^0.31.0"
fastapi-jwt = "^0.3.0"
python-jose = "^3.3.0"
pydantic = {extras = ["email"], version = "^2.9.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
